[project]
name = "hisaab-tracker"
version = "0.1.0"
description = "Minimal local personal financial planner for two people, file-based, no server/DB/auth."
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.2",
    "pydantic>=2.9",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
